name:          wine
version:       0.1.0
cabal-version: >= 1.8
build-type:    Simple

executable          wine
    hs-source-dirs: src/
    main-is:        Main.hs
    ghc-options:    -Wall -threaded -O2 -rtsopts -with-rtsopts=-N
    extensions:     OverloadedStrings
    other-modules:
                    Schema
                    Queries
    build-depends:  base   >= 4      && < 5
                  , scotty
                  , text 
                  , bytestring
                  , aeson
                  , sqlite-simple
                  , beam-core
                  , beam-sqlite
                  , http-types
