name:          wine
version:       0.1.0
cabal-version: >= 1.8
build-type:    Simple

executable          wine
    hs-source-dirs: src/
                    src/queries
                    src/schema
                    src/routes
    main-is:        Main.hs
    ghc-options:    -Wall -threaded -O2 -rtsopts -with-rtsopts=-N
    extensions:     OverloadedStrings
    other-modules:
                    Database
                    Polet
                    DBOperations
                    Queries
                    Routes
                    Json
    build-depends:  base   >= 4      && < 5
                  , scotty
                  , text 
                  , bytestring
                  , aeson
                  , sqlite-simple
                  , beam-core
                  , beam-sqlite
                  , http-types
                  , http-conduit
                  , HTTP
